--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,23 @@ body {
   overflow-x: hidden;
 }
 
-body {
+/* body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Comfortaa', Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+} */
+ 
+body {
+  scroll-behavior: smooth !important;
+  font-family: 'Comfortaa', Arial, Helvetica, sans-serif;
+  color: white;
+  background-color: rgb(0, 0, 0);
+}
+
+body strong {
+  font-weight: bold !important;
 }
 
 * {
