--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+/* src/app/globals.css */
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -13,22 +15,16 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
-
-/* body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: 'Comfortaa', Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-} */
  
 body {
   scroll-behavior: smooth !important;
   font-family: 'Comfortaa', Arial, Helvetica, sans-serif;
   color: white;
   background-color: rgb(0, 0, 0);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body strong {
